--- a/FabulousUtility/FabulousUtility.csproj
+++ b/FabulousUtility/FabulousUtility.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BF609B8D-6319-4178-8CCC-E82E7866DB64}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>FabulousUtility</RootNamespace>
+    <RootNamespace>QE.FabulousUtility</RootNamespace>
     <AssemblyName>FabulousUtility</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -39,7 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\ExtensionAttribute.cs" />
+    <Compile Include="Helpers\StringHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
